tests/test0154.ctr
# test expr {}
Number on: 'applyAll:' do: {:expr
  Pen writeln: '$$me ' + expr head evaluate.
}.
Nil keyword: 1 message { 123 + 321 }.
